tests/snapshots/btor2_test__parse_count2.snap
---
source: tests/btor2_test.rs
expression: sys.serialize_to_str(&ctx)
---
count2
node %3 : bv<3> = add(state, 3'b1)
bad %5 : bv<1> = eq(state, 3'b111)
state state : bv<3>
  [init] 3'b0
  [next] add(state, 3'b1)

