tests/snapshots/btor2_test__serialize_count2.snap
---
source: tests/btor2_test.rs
expression: "skip_first_line(&btor2::serialize_to_str(&ctx, &sys))"
---

