tests/snapshots/btor2_test__serialize_quiz1.snap
---
source: tests/btor2_test.rs
expression: "btor2::serialize_to_str(&ctx, &sys)"
---
; btor2 description of `Quiz1` generated by patron 0.2.0

